# ton-contest-2

./: .gitignore  .gitlab-ci.yml  .gitmodules  deploy.cmd  readme.md
algo_test/: lottery_algo_test.py
back/: CMakeLists.txt  SpecEntry.cpp  lottery-back_oas2.yml  readme.md
back/_misc/: lottery-back.service  lottery.service
bot/: bot-commands.go  bot-commands_test.go  go.mod  go.sum  logger.go  main.go  mock_Logger.go  mock_SmcAPI.go  readme.md  smc-api-impl.go  smc-api-impl_test.go  smc-api.go
bot/_misc/: bot_env  lottery-bot.service
front/: .env.production  README.md  package-lock.json  package.json
front/src/components/: CurrentParticipants.vue  CurrentPrizeFund.vue  CurrentRound.vue  MyPrize.vue  PrevLuckyNums.vue  PrevPrizes.vue  Rules.vue
front/src/store/: index.js
lottery/: code.fc  code.fif  lottery-conduct.fif  lottery-new.fif  lottery-test.fif  lottery-withdraw.fif  lotto-buy.fif  lotto-sponsor.fif  lotto-withdraw.fif
lottery-cli/: CMakeLists.txt  CMakeSettings.json  SpecEntry.h  lottery-back_oas2.yml  main.cpp  readme.md
lottery-cli/_misc/: lottery.service
lottery-front/: README.md  package-lock.json  package.json  vue.config.js
lottery-front/src/: App.vue  main.js
lottery-front/src/components/: CurrentRound.vue  PrevRound.vue  PrevWinners.vue  Rules.vue
lottery-front/src/store/: index.js
lottery_algo_test/: lottery_algo_test.py
smc/: code.fc  lottery-new.fif  lottery-withdraw.fif  lotto-buy.fif  lotto-sponsor.fif  lotto-withdraw.fif
